# ai-pathfinding-gradio-lab

./: .gitignore  EVALUATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LEARNING_ROADMAP.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: END_TO_END_PIPELINE.md  week_00_python_prerequisites.md  week_01_python_project_setup.md  week_02_grid_model.md  week_03_bfs_dfs.md  week_04_dijkstra.md  week_05_astar.md  week_06_heuristics.md  week_07_visualization.md  week_08_gradio_ui.md  week_09_benchmarking.md  week_10_ml_heuristic.md  week_11_polishing.md  week_12_final_project.md
exercises/: week_01.md  week_02.md  week_03.md  week_04.md  week_05.md  week_06.md  week_07.md  week_08.md  week_09.md  week_10.md  week_11.md  week_12.md
notebooks/: 00_python_prerequisites.ipynb  01_grid_basics.ipynb  01_grid_basics.md  02_bfs_dfs.ipynb  02_placeholder.md  03_dijkstra_astar.ipynb  03_placeholder.md  04_heuristics.ipynb  04_placeholder.md  05_algorithm_comparison.ipynb  05_placeholder.md  06_learned_heuristics.ipynb  06_placeholder.md  07_visualization.ipynb  08_gradio_ui.ipynb  11_polishing_testing.ipynb  README.md
solutions/: week_01_solutions.md  week_02_solutions.md  week_03_solutions.md  week_04_solutions.md  week_05_solutions.md  week_06_solutions.md  week_07_solutions.md  week_08_solutions.md  week_09_solutions.md  week_10_solutions.md  week_11_solutions.md  week_12_solutions.md
src/pathfinding_lab/: __init__.py
src/pathfinding_lab/algorithms/: __init__.py  astar.py  bfs.py  bidirectional_bfs.py  dfs.py  dijkstra.py  greedy_best_first.py
src/pathfinding_lab/core/: __init__.py  grid.py  node.py  result.py  types.py
src/pathfinding_lab/mazes/: __init__.py  (+2 more)
tests/: test_astar.py  test_bfs.py  test_bidirectional.py  test_dfs.py  test_dijkstra.py  test_greedy.py  test_grid.py  test_heuristics.py  test_metrics.py
(+22 files in other folders)
